--- a/public/chat.html
+++ b/public/chat.html
@@ -8,7 +8,7 @@
         form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
         form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
         form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-        #messages { list-style-type: none; margin: 0; padding: 0; }
+        #messages, #users { list-style-type: none; margin: 0; padding: 0; }
         #messages li { padding: 5px 10px; }
         #messages li:nth-child(odd) { background: #eee; }
         .left {
@@ -18,7 +18,27 @@
         .right {
             width: 30%;
             float: right;
-            background-color: #c0c0c0;
+        }
+        .username {
+            width: 10%;
+            display: inline-block;
+        }
+        .message {
+            width: 70%;
+            display: inline-block;
+        }
+        #users {
+            background-color: #e0e0e0;
+        }
+        #users li {
+            padding: 15px;
+            font-size: 1rem;
+            border-bottom: 1px solid white;
+            color: #ccc;
+        }
+        .online {
+            background-color: lightseagreen;
+            color: white;
         }
     </style>
 </head>
@@ -32,8 +52,8 @@
 </div>
 
 <form action="">
-    <input type="text" id="name">
-    <input id="m" autocomplete="off" /><button>Send</button>
+    <input type="text" id="name" class="username" placeholder="Username"/>
+    <input id="m" autocomplete="off" class="message" placeholder="Message"/><button>Send</button>
 </form>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
@@ -62,10 +82,11 @@
     socket.on('system message', function(obj) {
         appendMsg(obj.message, '#ccc');
         $('#users').html('')
+        obj.users.sort(function(a,b) {return b.isOnline - a.isOnline});
         for (var i = 0; i < obj.users.length; i++) {
             var currentUser =obj.users[i];
-            var color = currentUser.isOnline ? 'green' : '#ccc';
-            $('#users').append($('<li>').text(currentUser.id).css('color', color));
+            var onlineClass = currentUser.isOnline ? 'online' : '';
+            $('#users').append($('<li>').text(currentUser.id).addClass(onlineClass));
         }
     });
 
