--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .inputStyle {
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
-
     <div id="app"></div>
-
     <script type="text/javascript" src="js/react.js"></script>
     <script type="text/javascript" src="js/react-dom.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.24.2/babel.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.1/axios.min.js"></script>
     <script type="text/babel" src="js/app.jsx"></script>
-
 </body>
 </html>
